@@ -43,6 +43,7 @@ export(dropExtant)
 export(dropExtinct)
 export(dropPaleoTip)
 export(dropZLB)
+export(equation2function)
 export(expandTaxonTree)
 export(fixRootTime)
 export(footeValues)
